app/styles/dwhp.scss
html, body {
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
  color: #474747;
  font-family: -apple-system, BlinkMacSystemFont, ".SFNSDisplay-Light", "San Francisco", "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";

}

a {
  text-decoration: none;
  color: #004890;
  transition: color 0.2s;
  outline: none !important;

  &:hover {
    color: #005dba;
  }
}

.app-sizer {
  max-width: 1300px;
  margin: 0 auto;
  position: relative;
}

.app-background {
  height: 100vh;
  background: #004890 url("/images/overflow-background--index.jpg") no-repeat center center;
  background-size: cover;
  overflow: auto;

  &--index,
  &--page-not-found {
    background-image: url("/images/overflow-background--index.jpg");
  }

  &--team {
    background-image: url("/images/overflow-background--team.jpg");
  }

  &--approach {
    background-image: url("/images/overflow-background--approach.jpg");
  }

  &--companies {
    background-image: url("/images/overflow-background--companies.jpg");
  }

  &--contact {
    background-image: url("/images/overflow-background--contact.jpg");
  }

  &--news {
    background-image: url("/images/overflow-background--news.jpg");
  }
}

